--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,4 +52,5 @@ jobs:
           command: dockerize -wait tcp://localhost:5432 -timeout 1m
       - run: mix hex.audit
       - run: mix format --check-formatted
+      - run: mix do event_store.create, event_store.init
       - run: mix test
