chore: always run the container in TEST
There is no reason to run it in DEV. This makes the dev experience
easier.

Co-authored-by: Nicholas Henry <40253+nicholasjhenry@users.noreply.github.com>
Co-authored-by: Tetiana Dushenkivska <7498434+tetiana12345678@users.noreply.github.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,10 @@ services:
   application:
     build:
       context: .
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
+    environment:
+      # know need to be running this is dev
+      MIX_ENV: test
     volumes:
       # Mount the application: allows us to update files on the host without copying them into the image
       - .:/app
